infra/k8s/on-air-graphics/002-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: fk-on-air-graphics
spec:
  type: ClusterIP
  selector:
    app: fk-on-air-graphics
  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - protocol: TCP
      port: 80
      name: web
