infra/k8s/on-air-graphics/003-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: scheme-redirect
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: 443
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: fk-on-air-graphics-http
  namespace: default
spec:
  entryPoints: 
    - web
  routes:
    - match: Host(`graphics.frikanalen.no`)
      kind: Rule
      services:
      - kind: Service
        name: fk-on-air-graphics
        scheme: http
        port: 80
      middlewares:
        - name: scheme-redirect
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: fk-on-air-graphics-https
  namespace: default
spec:
  entryPoints: 
    - websecure
  routes:
    - match: Host(`graphics.frikanalen.no`)
      kind: Rule
      services:
      - kind: Service
        name: fk-on-air-graphics
        scheme: http
        port: 80
  tls:
    certResolver: default
